--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-
-
 services:
   gem_development:
     build: .
@@ -18,15 +16,20 @@ services:
       - ISC_PASSWORD=masterkey
       - FIREBIRD_DATABASE=/firebird/data/test.fdb
       - RAILS_ENV=test
+      - BUNDLE_DEPLOYMENT=true
+      - DB_HOST=firebird3  # Usar el nombre del servicio Docker
+    networks:
+      - firebird_net
+    restart: unless-stopped
 
   firebird3:
-    image: jacobalberty/firebird:3.0
+    image: firebirdsql/firebird:3
     container_name: firebird3
     environment:
       - ISC_PASSWORD=masterkey
       - FIREBIRD_DATABASE=/firebird/data/test.fdb
     ports:
-      - "3050:3050"
+      - "3053:3050"
     volumes:
       - firebird3_data:/firebird/data
       - ./spec/db:/firebird/data
@@ -35,7 +38,7 @@ services:
     restart: unless-stopped
 
   firebird4:
-    image: jacobalberty/firebird:4.0
+    image: firebirdsql/firebird:4
     container_name: firebird4
     environment:
       - ISC_PASSWORD=masterkey
@@ -50,7 +53,7 @@ services:
     restart: unless-stopped
 
   firebird5:
-    image: jacobalberty/firebird:5.0
+    image: firebirdsql/firebird:5
     container_name: firebird5
     environment:
       - ISC_PASSWORD=masterkey
@@ -64,32 +67,11 @@ services:
       - firebird_net
     restart: unless-stopped
 
-  # Test service for running specs
-  test_runner:
-    build: .
-    depends_on:
-      - firebird3
-      - firebird4
-      - firebird5
-    volumes:
-      - .:/app
-      - bundle_cache:/usr/local/bundle
-    working_dir: /app
-    environment:
-      - BUNDLE_PATH=/usr/local/bundle
-      - ISC_PASSWORD=masterkey
-      - FIREBIRD_DATABASE=/firebird/data/test.fdb
-      - RAILS_ENV=test
-    command: bundle exec rspec --format documentation
-    networks:
-      - firebird_net
-
 volumes:
   bundle_cache:
   firebird3_data:
   firebird4_data:
   firebird5_data:
-  postgres_data:
 
 networks:
   firebird_net:
