--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
 
     services:
       firebird:
-        image: jacobalberty/firebird:5.0
+        image: firebirdsql/firebird:latest
         env:
           FIREBIRD_PASSWORD: masterkey
           ISC_PASSWORD: masterkey
