--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,13 +16,13 @@ jobs:
         env:
           FIREBIRD_PASSWORD: masterkey
           ISC_PASSWORD: masterkey
+        options: >-
+          --health-cmd "isql-fb -user SYSDBA -password masterkey -h localhost"
+          --health-interval 30s
+          --health-timeout 10s
+          --health-retries 10
         ports:
           - 3050:3050
-        options: >-
-          --health-cmd "isql-fb -user SYSDBA -password masterkey 'localhost:/firebird/data/test.fdb'"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
 
     steps:
     - name: Checkout
@@ -37,7 +37,7 @@ jobs:
     - name: Install Firebird Client Libraries
       run: |
         sudo apt-get update
-        sudo apt-get install -y firebird-dev libfbclient2
+        sudo apt-get install -y firebird-dev libfbclient2 netcat-openbsd
         echo "FIREBIRD_INCLUDE=/usr/include/firebird" >> $GITHUB_ENV
         echo "FIREBIRD_LIB=/usr/lib/x86_64-linux-gnu" >> $GITHUB_ENV
 
@@ -58,7 +58,14 @@ jobs:
     - name: Wait for Firebird
       run: |
         echo "Waiting for Firebird to be ready..."
-        sleep 10
+        for i in {1..30}; do
+          if nc -z localhost 3050; then
+            echo "Firebird is ready!"
+            break
+          fi
+          echo "Waiting... ($i/30)"
+          sleep 2
+        done
 
     - name: Run Tests
       env:
