fix ci.yml and upload local modifications

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,15 +12,14 @@ jobs:
 
     services:
       firebird:
-        image: firebirdsql/firebird:latest
+        image: firebirdsql/firebird:5.0
         env:
-          FIREBIRD_ROOT_PASSWORD: masterkey
+          ISC_PASSWORD: masterkey
         options: >-
-          --health-cmd "isql-fb -user SYSDBA -password masterkey -h localhost"
-          --health-interval 30s
-          --health-timeout 10s
-          --health-retries 10
-          -v fb_data:/var/lib/firebird/data
+          --health-cmd "bash -c 'echo \"SELECT 1 FROM RDB\$DATABASE;\" | isql-fb -user SYSDBA -password masterkey localhost:3050'"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
         ports:
           - 3050:3050
 
@@ -33,6 +32,7 @@ jobs:
       with:
         ruby-version: '3.3.6'
         rubygems: latest
+        bundler-cache: true
 
     - name: Install Firebird Client Libraries
       run: |
@@ -40,39 +40,86 @@ jobs:
         sudo apt-get install -y firebird-dev libfbclient2 netcat-openbsd
         echo "FIREBIRD_INCLUDE=/usr/include/firebird" >> $GITHUB_ENV
         echo "FIREBIRD_LIB=/usr/lib/x86_64-linux-gnu" >> $GITHUB_ENV
+        echo "ISC_PASSWORD=masterkey" >> $GITHUB_ENV
 
-    - name: Check Firebird Headers
+    - name: Verify Firebird Installation
       run: |
-        ls -la /usr/include/firebird/ || echo "No firebird headers found"
-        find /usr -name "ibase.h" 2>/dev/null || echo "No ibase.h found"
+        echo "Checking Firebird client installation..."
+        dpkg -l | grep firebird
+        ls -la /usr/include/firebird/ 2>/dev/null || echo "Headers directory not found"
+        find /usr -name "ibase.h" 2>/dev/null | head -5
 
     - name: Install Dependencies
       run: |
         bundle install
 
-    - name: Check Installation
+    - name: Verify FB Gem Installation
       run: |
-        bundle list | grep fb
-        ruby -r fb -e "puts 'FB gem loaded successfully'" || echo "FB gem not available"
+        bundle list | grep fb || echo "FB gem not in bundle"
+        ruby -e "begin; require 'fb'; puts 'FB gem version: ' + Fb::VERSION; rescue LoadError => e; puts 'Error: ' + e.message; end"
 
-    - name: Wait for Firebird
+    - name: Wait for Firebird Service
       run: |
-        echo "Waiting for Firebird to be ready..."
-        for i in {1..30}; do
-          if nc -z localhost 3050; then
-            echo "Firebird is ready!"
-            break
-          fi
-          echo "Waiting... ($i/30)"
-          sleep 2
-        done
+        echo "Waiting for Firebird service to be ready..."
+        timeout 60s bash -c '
+          while ! nc -z localhost 3050; do
+            echo "Waiting for Firebird... (checking port 3050)"
+            sleep 2
+          done
+          echo "Firebird port is open!"
+
+          # Additional check: try to connect
+          for i in {1..10}; do
+            if echo "SELECT 1 FROM RDB\$DATABASE;" | isql-fb -user SYSDBA -password masterkey localhost:3050 2>&1 | grep -q "1"; then
+              echo "Firebird database is accessible!"
+              exit 0
+            fi
+            echo "Waiting for database to be ready... ($i/10)"
+            sleep 2
+          done
+          echo "Timeout waiting for Firebird database"
+          exit 1
+        '
+
+    - name: Test Firebird Connection
+      run: |
+        echo "Testing Firebird connection..."
+        echo "SELECT 1 FROM RDB\$DATABASE;" | isql-fb -user SYSDBA -password masterkey localhost:3050
+
+        ruby -e "
+          require 'fb'
+          begin
+            conn = Fb::Database.connect(
+              :database => 'localhost:3050:/tmp/test.fdb',
+              :username => 'SYSDBA',
+              :password => 'masterkey'
+            )
+            puts 'Connection successful!'
+            conn.disconnect
+          rescue => e
+            puts 'Connection failed: ' + e.message
+            exit 1
+          end
+        "
 
     - name: Run Tests
       env:
-        DB_HOST: firebird
+        DB_HOST: localhost
+        FIREBIRD_HOST: localhost
+        FIREBIRD_PORT: 3050
+        FIREBIRD_USER: SYSDBA
+        FIREBIRD_PASSWORD: masterkey
       run: |
-        echo "Running basic tests..."
-        ruby -c lib/firebird_adapter.rb
+        echo "Running syntax check..."
+        ruby -c lib/firebird_adapter.rb || exit 1
 
         echo "Running RSpec tests..."
-        bundle exec rspec --format documentation || true
+        bundle exec rspec --format documentation --color
+
+    - name: Upload Test Results
+      if: always()
+      uses: actions/upload-artifact@v3
+      with:
+        name: test-results
+        path: tmp/test-results.xml
+        if-no-files-found: ignore
