--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
 
     services:
       firebird:
-        image: firebirdsql/firebird:5.0
+        image: firebirdsql/firebird:latest
         env:
           ISC_PASSWORD: masterkey
         options: >-
