--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,8 +60,8 @@ jobs:
         echo "=== Bundle list ==="
         bundle list | grep -i fb || echo "FB gem not found in bundle"
 
-        echo -e "\n=== Ruby FB gem test ==="
-        ruby -e "
+        echo -e "\n=== Ruby FB gem test (using bundle exec) ==="
+        bundle exec ruby -e "
           begin
             require 'fb'
             puts 'FB gem loaded successfully'
@@ -119,7 +119,7 @@ jobs:
         FIREBIRD_DATABASE: /tmp/test.fdb
       run: |
         echo "Running syntax check..."
-        ruby -c lib/firebird_adapter.rb || exit 1
+        bundle exec ruby -c lib/firebird_adapter.rb || exit 1
 
         echo -e "\nRunning RSpec tests..."
         bundle exec rspec --format documentation --color --format RSpec::JUnitReporter --out tmp/test-results.xml || exit 1
