--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Install Firebird Client Libraries
       run: |
         sudo apt-get update
-        sudo apt-get install -y firebird-dev libfbclient2 netcat-openbsd
+        sudo apt-get install -y firebird-dev libfbclient2 netcat-openbsd isql-fb
 
         # Verificar ubicación de headers
         echo "=== Buscando ibase.h ==="
@@ -41,6 +41,11 @@ jobs:
           sudo ln -sf /usr/include/firebird/ibase.h /usr/include/ibase.h
           echo "Creado symlink para ibase.h"
         fi
+
+        # Agregar firebird al PATH
+        export PATH=$PATH:/usr/lib/x86_64-linux-gnu/firebird/5.0/bin:/opt/firebird/bin
+        echo "PATH actual: $PATH"
+        which isql-fb || find /usr -name "isql-fb" 2>/dev/null
 
     - name: Setup Ruby
       uses: ruby/setup-ruby@v1
@@ -74,6 +79,9 @@ jobs:
 
     - name: Wait for Firebird Service
       run: |
+        # Agregar firebird al PATH
+        export PATH=$PATH:/usr/lib/x86_64-linux-gnu/firebird/5.0/bin:/opt/firebird/bin
+
         echo "Waiting for Firebird service on port 3050..."
         for i in {1..30}; do
           if nc -z localhost 3050 2>/dev/null; then
@@ -98,6 +106,9 @@ jobs:
 
     - name: Create Test Database
       run: |
+        # Agregar firebird al PATH
+        export PATH=$PATH:/usr/lib/x86_64-linux-gnu/firebird/5.0/bin:/opt/firebird/bin
+
         DB_PATH="/tmp/test.fdb"
         echo "Creating test database at $DB_PATH..."
         echo "CREATE DATABASE '$DB_PATH' USER 'SYSDBA' PASSWORD 'masterkey';" | isql-fb -user SYSDBA -password masterkey
