--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,12 +47,10 @@ jobs:
       with:
         ruby-version: '3.3.6'
         rubygems: latest
-        bundler-cache: false
+        bundler-cache: true
 
     - name: Install Dependencies
       run: |
-        bundle config set --local path 'vendor/bundle'
-        bundle config set --local jobs 4
         bundle install
 
     - name: Verify FB Gem Installation
@@ -111,7 +109,7 @@ jobs:
         bundle exec ruby -c lib/firebird_adapter.rb || exit 1
 
         echo -e "\nRunning RSpec tests..."
-        bundle exec rspec --format documentation --color --format RSpec::JUnitReporter --out tmp/test-results.xml || exit 1
+        bundle exec rspec --format documentation --color --format RSpec::JUnitFormatter --out tmp/test-results.xml || exit 1
 
     - name: Upload Test Results
       if: always()
